--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install:
   - dotnet restore
 script:
   - dotnet build
-  - dotnet test ProjectPurple/tests/TestDemo/TestDemo.csproj
+  - dotnet test tests/*
